# listening

./: .gitmodules  CMakeLists.txt  README.md  listener.cc  listener.h  listening.cc
cpp/: CMakeLists.txt  README.md  listener.cc  listener.h  listening.cc
cpp/test/: listener_test.cc
listening/: main.swift
listening-swift.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: main.rs
swift/: Package.swift
swift/Sources/listening/: Listeners.swift  main.swift  shell.swift
swift/Tests/listeningTests/: ListenerTests.swift
swift/listening/: Listeners.swift
swift/listening-swift.xcodeproj/: project.pbxproj
